--- a/0x01-react_intro/task_5/dashboard/package.json
+++ b/0x01-react_intro/task_5/dashboard/package.json
@@ -13,9 +13,9 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "webpack-dev-server --mode development --config config/webpack.config.js",
+    "test": "jest",
     "build": "react-scripts build",
-    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
